--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
             font-family: digit;
             src: url('digital-7_mono.ttf') format("truetype");
         }
+
     </style>
+
 
     <link href="css/default.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
+    <audio src="music/AtMyWorst.mp3" id="dd" autoplay="autoplay" controls="controls" loop="loop"></audio>
 
 </head>
 
