更改了页面的 部分位置

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             src: url('digital-7_mono.ttf') format("truetype");
         }
 
+
+
     </style>
 
 
@@ -32,13 +34,14 @@
 
 <div id="mainDiv">
     <div id="content">
-        <div id="code">
+
+        <div id="code" style="font-size: 18px;position: absolute;top: 10px">
             <span class="comments">/*</span><br />
             <span class="space"/><span class="comments">*2023—01-13</span><br />
             <!--<span class="space"/><span class="comments">*2018-12-31.</span><br /> -->
             <span class="space"/><span class="comments">*/</span><br />
-            Boy name = <span class="keyword">Mr</span> 邓嘉骅<br />
-            Girl name = <span class="keyword">Mrs</span> 刘林丽<br />
+            Boy name = <span class="keyword">Mr</span> dengjiahua<br />
+            Girl name = <span class="keyword">Mrs</span> liulingli<br />
             <span class="comments">// Fall in love river. </span><br />
             The boy love the girl;<br />
             <span class="comments">// They love each other.</span><br />
@@ -60,7 +63,7 @@
             I want to say:<br />
             Baby, I love you forever;<br />
         </div>
-        <div id="loveHeart">
+        <div id="loveHeart" style="position: absolute;left: 800px">
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
