--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0, maximum-scale=0, user-scalable=yes,shrink-to-fit=no">
+
+
     <title>Time</title>
 
     <style type="text/css">
@@ -44,7 +46,7 @@
             <!--<span class="space"/><span class="comments">*2018-12-31.</span><br /> -->
             <span class="space"/><span class="comments">*/</span><br />
             Boy name = <span class="keyword">Mr</span> dengjiahua<br />
-            Girl name = <span class="keyword">Mrs</span> liulingli<br />
+            Girl name = <span class="keyword">Mrs</span> liulinli<br />
             <span class="comments">// Fall in love river. </span><br />
             The boy love the girl;<br />
             <span class="comments">// They love each other.</span><br />
@@ -70,12 +72,13 @@
             <canvas id="garden"></canvas>
             <div id="words">
                 <div id="messages">
-                    亲爱的，这是我们相爱在一起的时光
+                    亲爱的伶子：
+                    这是我们相爱在一起的时光
                     <div id="elapseClock"></div>
                 </div>
                 <div id="loveu">
                     爱你直到永永远远<br/>
-                    <div class="signature"> 邓嘉骅</div>
+                    <div class="signature"> 嘉骅</div>
                 </div>
             </div>
         </div>
